Regression for Class Attributes

--- a/notebooks/rrdistance_regression.ipynb
+++ b/notebooks/rrdistance_regression.ipynb
@@ -773,7 +773,7 @@
     }
    ],
    "source": [
-    "#rrdistance seems to correlate heavily with total area\n",
+    "#rrdistance seems to correlate with total area\n",
     "# rrdistance itself may not be indicative of a lower price. It may be indicative of a smaller house\n",
     "%matplotlib inline\n",
     "\n",
@@ -1497,7 +1497,7 @@
    ],
    "source": [
     "# Actual vs Predicted plot\n",
-    "#Linear regression is the clear winner here \n",
+    "#KNN regression is the clear winner here \n",
     "x = np.array([actual_1, actual_2, actual_3, actual_4, actual_5])\n",
     "y = np.array([prediction_1, prediction_2, prediction_3, prediction_4, prediction_5])\n",
     "plt.scatter(x, y)\n",
